--- a/src/siene/main-div/main-div.component.html
+++ b/src/siene/main-div/main-div.component.html
@@ -1,3 +1,4 @@
 <div class="mainDiv" [attr.style]="matrix">
-
+  <router-outlet></router-outlet>
+  <app-loading-and-po [mainHeight]="hSet"></app-loading-and-po>
 </div>
