--- a/src/siene/loading-and-po/loading-and-po.component.html
+++ b/src/siene/loading-and-po/loading-and-po.component.html
@@ -1,3 +1,3 @@
-<div class="loadingShadow" [attr.style]="heightStr">
+<div class="loadingShadow" [attr.style]="styleHeight">
   <div class="loadingBg"><div class="loadingPicture" [attr.style]="isLoading"><img src="../../assets/loading.gif" alt=""></div></div>
 </div>
