--- a/src/siene/video/video.component.html
+++ b/src/siene/video/video.component.html
@@ -1,3 +1,23 @@
-<p>
-  video works!
-</p>
+<!--<video src="image/baby.mp4" width="1126" autoplay=false></video>-->
+<object id="FlashID" classid="clsid:D27CDB6E-AE6D-11cf-96B8-444553540000" width="750" height="1200">
+  <param name="movie" value="../../assets/videoRtmp.swf">
+  <param name="quality" value="high">
+  <param name="wmode" value="opaque">
+  <param name="swfversion" value="6.0.65.0">
+  <param name="flashVars" value="{{flashVars}}" />
+  <!-- 此 param 标签提示使用 Flash Player 6.0 r65 和更高版本的用户下载最新版本的 Flash Player。如果您不想让用户看到该提示，请将其删除。 -->
+  <param name="expressinstall" value="Scripts/expressInstall.swf">
+  <!-- 下一个对象标签用于非 IE 浏览器。所以使用 IECC 将其从 IE 隐藏。 -->
+  <!--[if !IE]>-->
+  <object type="application/x-shockwave-flash" data="../../assets/videoRtmp.swf" width="750" height="1200">
+    <!--<![endif]-->
+    <param name="quality" value="high">
+    <param name="wmode" value="opaque">
+    <param name="swfversion" value="6.0.65.0">
+    <param name="expressinstall" value="Scripts/expressInstall.swf">
+    <param name="flashVars" value="{{flashVars}}" />
+    <!-- 浏览器将以下替代内容显示给使用 Flash Player 6.0 和更低版本的用户。 -->
+    <!--[if !IE]>-->
+  </object>
+  <!--<![endif]-->
+</object>
