--- a/src/siene/video/video.component.html
+++ b/src/siene/video/video.component.html
@@ -21,4 +21,5 @@
   </object>
   <!--<![endif]-->
 </object>
-<div class="control"></div>
+<div class="control"><img src="../../assets/control/btn_play01.png" (click)="startMachine()" (window:keydown)="onKeyDown($event)" (window:keyup)="onKeyUp($event)">
+</div>
