--- a/src/siene/video/video.component.html
+++ b/src/siene/video/video.component.html
@@ -1,3 +1,4 @@
+<app-head-bar></app-head-bar>
 <!--<video src="image/baby.mp4" width="1126" autoplay=false></video>-->
 <object id="FlashID" classid="clsid:D27CDB6E-AE6D-11cf-96B8-444553540000" width="750" height="1200">
   <param name="movie" value="../../assets/videoRtmp.swf">
