--- a/src/siene/lobby/lobby.component.html
+++ b/src/siene/lobby/lobby.component.html
@@ -1,4 +1,2 @@
-<p>
-  lobby works!
-</p>
+<app-head-bar></app-head-bar>
 <div *ngFor="let item of machines"><img src={{item.img}} (click)="onItemClick(item)" width="300px" height="300px"></div>
