--- a/src/pagePart/head-bar/head-bar.component.html
+++ b/src/pagePart/head-bar/head-bar.component.html
@@ -1,1 +1,7 @@
-<div class="head"><app-image [imgData]="topBarBg"></app-image></div>
+<div class="head">
+  <app-image [imgData]="topBarBg"></app-image>
+  <app-image [imgData]="headMask"></app-image>
+  <app-image [imgData]="vipIcon"></app-image>
+  <app-image [imgData]="coinsBg1"></app-image>
+  <app-image [imgData]="coinsBg2"></app-image>
+</div>
