--- a/src/pagePart/head-bar/head-bar.component.html
+++ b/src/pagePart/head-bar/head-bar.component.html
@@ -1,7 +1,13 @@
 <div class="head">
   <app-image [imgData]="topBarBg"></app-image>
+  <div class="facebookHead">
+    <img src="https://graph.facebook.com/115260495912054/picture/?width=80&height=80">
+  </div>
   <app-image [imgData]="headMask"></app-image>
   <app-image [imgData]="vipIcon"></app-image>
   <app-image [imgData]="coinsBg1"></app-image>
   <app-image [imgData]="coinsBg2"></app-image>
+  <app-image [imgData]="letter"></app-image>
+  <app-image [imgData]="coin"></app-image>
+  <app-image [imgData]="ticket"></app-image>
 </div>
