--- a/src/pagePart/head-bar/head-bar.component.css
+++ b/src/pagePart/head-bar/head-bar.component.css
@@ -1,3 +1,10 @@
 .head{
   position: absolute;
 }
+.facebookHead{
+  position: absolute;
+  width: 80px;
+  height: 80px;
+  top: 18px;
+  left: 20px;
+}
