--- a/src/pagePart/head-bar/head-bar.component.html
+++ b/src/pagePart/head-bar/head-bar.component.html
@@ -10,4 +10,5 @@
   <app-image [imgData]="letter"></app-image>
   <app-image [imgData]="coin"></app-image>
   <app-image [imgData]="ticket"></app-image>
+  <app-image [imgData]="plus"></app-image>
 </div>
