--- a/src/pagePart/head-bar/head-bar.component.html
+++ b/src/pagePart/head-bar/head-bar.component.html
@@ -11,4 +11,5 @@
   <app-image [imgData]="coin"></app-image>
   <app-image [imgData]="ticket"></app-image>
   <app-image [imgData]="plus"></app-image>
+  <app-text-field [textStyle]="coinsTx"></app-text-field>
 </div>
