--- a/src/pagePart/head-bar/head-bar.component.html
+++ b/src/pagePart/head-bar/head-bar.component.html
@@ -11,5 +11,5 @@
   <app-image [imgData]="coin"></app-image>
   <app-image [imgData]="ticket"></app-image>
   <app-image [imgData]="plus"></app-image>
-  <app-text-field [textStyle]="coinsTx"></app-text-field>
+  <app-text-field [positionRect]="coinsRect" [text]="''+coinNumber" [color]="textColor" [size]="textSize" [bold]="true"></app-text-field>
 </div>
