--- a/src/pagePart/text-field/text-field.component.css
+++ b/src/pagePart/text-field/text-field.component.css
@@ -1,5 +1,8 @@
 .textField{
   position: absolute;
+  overflow: hidden;
   text-align: center;
   vertical-align: middle;
+  -webkit-user-select: none;
+  -moz-user-select: none;
 }
