--- a/src/pagePart/head-bar/head-bar.component.html
+++ b/src/pagePart/head-bar/head-bar.component.html
@@ -12,4 +12,5 @@
   <app-image [imgData]="ticket"></app-image>
   <app-image [imgData]="plus"></app-image>
   <app-text-field [positionRect]="coinsRect" [text]="''+coinNumber" [color]="textColor" [size]="textSize" [bold]="true"></app-text-field>
+  <app-text-field [positionRect]="ticketsRect" [text]="''+ticketNumber" [color]="textColor" [size]="textSize" [bold]="true"></app-text-field>
 </div>
