--- a/src/siene/lobby/lobby.component.html
+++ b/src/siene/lobby/lobby.component.html
@@ -1,3 +1,4 @@
 <app-head-bar></app-head-bar>
 <app-banner></app-banner>
 <div *ngFor="let item of machines"><img src={{item.img}} (click)="onItemClick(item)" width="300px" height="300px"></div>
+<app-bottom-bar></app-bottom-bar>
