--- a/src/siene/product-list/product-list.component.html
+++ b/src/siene/product-list/product-list.component.html
@@ -1,3 +1,4 @@
 <div class="productListContainer" [style.height]="listHeight - 425 + 'px'" >
-  <div *ngFor="let item of machines" class="productList"><img src={{item.img}} (click)="onItemClick(item)" width="300px" height="300px"></div>
+  <app-image *ngFor="let icon of iconList"  [imgData]="icon"></app-image>
+  <app-product-item *ngFor="let item of machines" [itemData]="item" [textureData]="topbarTexture"></app-product-item>
 </div>
