--- a/src/siene/product-list/product-list.component.css
+++ b/src/siene/product-list/product-list.component.css
@@ -3,7 +3,7 @@
   top: 346px;
   width: 750px;
   margin:0px;
-  background-image: url(../../assets/bg.png);
+  background-image: url(./../../assets/bg.png);
   background-repeat: no-repeat;
   background-size:100% 100%;
 }
