--- a/src/siene/product-item/product-item.component.html
+++ b/src/siene/product-item/product-item.component.html
@@ -1,3 +1,7 @@
-<app-image [imgData]="productBg"></app-image>
-<img src={{itemData.img}} (click)="onItemClick(itemData)" width="300px" height="300px" class="productImage">
-<app-image [imgData]="vipFlag"></app-image>
+<div class="productItem" [style]="position">
+  <app-image [imgData]="productBg"></app-image>
+    <div class="productPic">
+      <img src={{itemData.img}} (click)="onItemClick(itemData)" width="320px" height="308px" class="productImage">、
+    </div>
+  <app-image [imgData]="vipFlag"></app-image>
+</div>
