--- a/src/basicUI/text-field/text-field.component.html
+++ b/src/basicUI/text-field/text-field.component.html
@@ -1,4 +1,4 @@
 <div class="textField" [style.top]="txtRect.y+'px'" [style.left]="txtRect.x+'px'" [style.width]="txtRect.width+'px'" [style.height]="txtRect.height+'px'"
-[style.line-height]="txtRect.height+'px'" [style.color] = "colorStr" [style.fontSize]="sizeStr" [style.fontFamily]="fontStr">
-  <span #sp>{{textStr}}</span>
+[style.line-height]="txtRect.height+'px'" [style.text-align]="textAlign">
+  <span class="sp" [style.fontFamily]="fontStr" [style.font-weight]="fontBold" [style.color]="colorStr" [style.fontSize]="sizeStr" #sp>{{textStr}}</span>
 </div>
