--- a/src/siene/lobby/product-list/product-list.component.css
+++ b/src/siene/lobby/product-list/product-list.component.css
@@ -7,3 +7,12 @@
   background-repeat: no-repeat;
   background-size:100% 100%;
 }
+.productListBar{
+  position: absolute;
+  top: 215px;
+  width: 750px;
+  overflow: hidden;
+}
+.scrollArea{
+  position: absolute;
+}
