add touch event

--- a/src/siene/lobby/product-item/product-item.component.html
+++ b/src/siene/lobby/product-item/product-item.component.html
@@ -7,5 +7,5 @@
   <app-image [imgData]="coinIcon"></app-image>
   <app-image [imgData]="infoIcon"></app-image>
   <app-text-field [positionRect]="priceRect" [text]="''+itemPrice" [color]="textColor" [size]="textSize" [bold]="true" [align]="textAlign"></app-text-field>
-  <app-text-field [positionRect]="nameRect" [text]="''+itemName" [color]="textColor" [size]="textSize" [bold]="true" [align]="textAlign"></app-text-field>
+  <app-text-field [positionRect]="nameRect" [text]="itemName" [color]="textColor" [size]="textSize" [bold]="true" [align]="textAlign"></app-text-field>
 </div>
