--- a/src/siene/lobby/lobby/lobby.component.html
+++ b/src/siene/lobby/lobby/lobby.component.html
@@ -1,4 +1,12 @@
-<app-product-list [machines]="machines" [listHeight]="pageHeight"></app-product-list>
+<!--
+ * @Description:
+ * @version: 1.0
+ * @Author: Wayne Yu
+ * @Date: 2021-05-24 13:22:49
+ * @LastEditors: Wayne Yu
+ * @LastEditTime: 2021-06-08 14:14:28
+-->
+<app-product-list [machines]="machines" [listHeight]="pageHeight"  (itemClick)="onProductItemClick($event)"></app-product-list>
 <app-banner></app-banner>
 <app-head-bar></app-head-bar>
 <app-bottom-bar></app-bottom-bar>
