--- a/src/siene/lobby/product-list/product-list.component.html
+++ b/src/siene/lobby/product-list/product-list.component.html
@@ -1,7 +1,15 @@
+<!--
+ * @Description:
+ * @version: 1.0
+ * @Author: Wayne Yu
+ * @Date: 2021-06-04 10:57:58
+ * @LastEditors: Wayne Yu
+ * @LastEditTime: 2021-06-08 13:23:02
+-->
 <div class="productListContainer" [style.height]="listHeight - 425 + 'px'" >
   <div class="productListBar" [style.height]="listHeight - 640 + 'px'" id="productListBarDiv">
     <div class="scrollArea" [style.top]="scrollY + 'px'">
-      <app-product-item *ngFor="let item of machines; let i = index" [itemData]="item" [textureData]="textureData" [index]="i"></app-product-item>
+      <app-product-item *ngFor="let item of machines; let i = index" [itemData]="item" [textureData]="textureData" [index]="i" (itemClick)="onItemClick($event)"></app-product-item>
     </div>
   </div>
   <app-image *ngFor="let icon of iconList"  [imgData]="icon"></app-image>
