--- a/src/pagePart/head-bar/head-bar.component.html
+++ b/src/pagePart/head-bar/head-bar.component.html
@@ -1,7 +1,15 @@
+<!--
+ * @Description:
+ * @version: 1.0
+ * @Author: Wayne Yu
+ * @Date: 2021-05-26 13:36:53
+ * @LastEditors: Wayne Yu
+ * @LastEditTime: 2021-06-10 11:27:44
+-->
 <div class="head">
   <app-image [imgData]="topBarBg"></app-image>
   <div class="facebookHead">
-    <img src="https://graph.facebook.com/115260495912054/picture/?width=80&height=80">
+    <img src="{{headIcon}}">
   </div>
   <app-image [imgData]="headMask"></app-image>
   <app-image [imgData]="vipIcon"></app-image>
