assets for video

--- a/src/siene/loading-and-po/loading-and-po.component.html
+++ b/src/siene/loading-and-po/loading-and-po.component.html
@@ -1,3 +1,11 @@
+<!--
+ * @Description:
+ * @version: 1.0
+ * @Author: Wayne Yu
+ * @Date: 2021-05-20 10:43:20
+ * @LastEditors: Wayne Yu
+ * @LastEditTime: 2021-06-10 16:17:32
+-->
 <div class="loadingShadow" [attr.style]="styleHeight">
-  <div class="loadingBg"><div class="loadingPicture" [attr.style]="isLoading"><img src="../../assets/loading.gif" alt=""></div></div>
+  <div class="loadingBg"><div class="loadingPicture" [attr.style]="isLoading"><img src="assets/loading.gif" alt=""></div></div>
 </div>
