--- a/src/siene/lobby/banner/banner.component.html
+++ b/src/siene/lobby/banner/banner.component.html
@@ -1,4 +1,12 @@
+<!--
+ * @Description:
+ * @version: 1.0
+ * @Author: Wayne Yu
+ * @Date: 2021-06-02 14:04:12
+ * @LastEditors: Wayne Yu
+ * @LastEditTime: 2021-06-10 16:28:30
+-->
 <div class="banner">
-  <img src="./assets/banner/banner_01.png" class="bannerPic">
+  <img src="assets/banner/banner_01.png" class="bannerPic">
 </div>
 <div class="bannerHr"></div>
