--- a/src/siene/video/video/video.component.html
+++ b/src/siene/video/video/video.component.html
@@ -4,9 +4,11 @@
  * @Author: Wayne Yu
  * @Date: 2021-05-26 16:46:50
  * @LastEditors: Wayne Yu
- * @LastEditTime: 2021-06-10 16:16:40
+ * @LastEditTime: 2021-06-10 17:45:38
 -->
 <app-head-bar></app-head-bar>
 <div id="stream"></div>
-<div class="control"><img src="assets/control/btn_play01.png" (click)="startMachine()" (window:keydown)="onKeyDown($event)" (window:keyup)="onKeyUp($event)">
-</div>
+<!-- <div class="control"><img src="assets/control/btn_play01.png" (click)="startMachine()" (window:keydown)="onKeyDown($event)" (window:keyup)="onKeyUp($event)">
+</div> -->
+<app-image [imgData]="turnCameraBtn"></app-image>
+<app-control-bar [textureData]="textureData" [productImg]="data.img"></app-control-bar>
