--- a/src/pagePart/bottom-bar/bottom-bar.component.html
+++ b/src/pagePart/bottom-bar/bottom-bar.component.html
@@ -3,5 +3,5 @@
   <app-image [imgData]="home"></app-image>
   <app-image [imgData]="shop"></app-image>
   <app-image [imgData]="rank"></app-image>
-  <app-image [imgData]="my"></app-image>
+  <app-image-button [imgData]="my" (itemClick)="logout()" ></app-image-button>
 </div>
