--- a/src/siene/video/video/video.component.html
+++ b/src/siene/video/video/video.component.html
@@ -7,10 +7,10 @@
  * @LastEditTime: 2021-06-10 17:45:38
 -->
 <div class="videoFrame">
-    <iframe src="https://direct.hermetix.io/video.html?stream=1" width="1500" height="2400"></iframe>
+    <iframe src="https://direct.hermetix.io/video.html?stream=1" width="1500" height="2400" id="videoFrame"></iframe>
 </div>
 <app-head-bar></app-head-bar>
 <!-- <div class="control"><img src="assets/control/btn_play01.png" (click)="startMachine()" (window:keydown)="onKeyDown($event)" (window:keyup)="onKeyUp($event)">
 </div> -->
 <app-image-button [imgData]="backToLobbyBtn" (itemClick)="backToLobby()"></app-image-button>
-<app-control-bar [textureData]="textureData" [productImg]="data.img"></app-control-bar>
+<app-control-bar [textureData]="textureData" [productImg]="data.img" (videoToggle)="onVideoToggle()"></app-control-bar>
