--- a/src/siene/video/control-bar/control-bar.component.html
+++ b/src/siene/video/control-bar/control-bar.component.html
@@ -15,7 +15,8 @@
   <app-image-scale-button [imgData]="cameraBg" [buttonIcon]="cameraIcon" (itemClick)="toggle()" ></app-image-scale-button>
   <div>
     <app-image [imgData]="addCoin"></app-image>
-    <!-- <app-image [imgData]="turnCameraBtn"></app-image>
-    <app-image [imgData]="turnCameraBtn"></app-image> -->
+    <app-image [imgData]="chatIcon"></app-image>
+    <app-image-scale-button [imgData]="playBtnBg" [buttonIcon]="playBtnIcon" ></app-image-scale-button>
+    <app-image-scale-button [imgData]="occupiedBg" [buttonIcon]="occupiedIcon" [enabled]="false" *ngIf="canPlayNow"></app-image-scale-button>
   </div>
 </div>
