--- a/src/siene/video/video/video.component.html
+++ b/src/siene/video/video/video.component.html
@@ -4,7 +4,7 @@
  * @Author: Wayne Yu
  * @Date: 2021-05-26 16:46:50
  * @LastEditors: Wayne Yu
- * @LastEditTime: 2021-06-10 17:45:38
+ * @LastEditTime: 2021-07-01 10:57:25
 -->
 <div class="videoFrame">
     <iframe src="https://direct.hermetix.io/video.html?stream=1" width="1500" height="2400" id="videoFrame"></iframe>
@@ -14,4 +14,4 @@
 </div> -->
 <app-image-button [imgData]="backToLobbyBtn" (itemClick)="backToLobby()"></app-image-button>
 <app-control-bar [textureData]="textureData" [productImg]="data.img" (videoToggle)="onVideoToggle()" 
-    [occupied]="playingUser!=null" (startPlayDP)="startMachine()"></app-control-bar>
+    [occupied]="playingUser!=null" [playing]="playing" (startPlayDP)="startMachine()"></app-control-bar>
