firebase in benner

--- a/src/siene/lobby/banner/banner.component.html
+++ b/src/siene/lobby/banner/banner.component.html
@@ -6,7 +6,7 @@
  * @LastEditors: Wayne Yu
  * @LastEditTime: 2021-06-10 16:28:30
 -->
-<div class="banner">
+<div class="banner" (click)="bennerClick()">
   <img src="assets/banner/banner_01.png" class="bannerPic">
 </div>
 <div class="bannerHr"></div>
