--- a/src/pagePart/head-bar/head-bar.component.html
+++ b/src/pagePart/head-bar/head-bar.component.html
@@ -4,7 +4,7 @@
  * @Author: Wayne Yu
  * @Date: 2021-05-26 13:36:53
  * @LastEditors: Wayne Yu
- * @LastEditTime: 2021-06-10 11:27:44
+ * @LastEditTime: 2021-07-02 10:48:27
 -->
 <div class="head">
   <app-image [imgData]="topBarBg"></app-image>
@@ -12,7 +12,7 @@
     <img src="{{headIcon}}">
   </div>
   <app-image [imgData]="headMask"></app-image>
-  <app-image [imgData]="vipIcon"></app-image>
+  <app-image [imgData]="vipIcon" *ngIf="isVip"></app-image>
   <app-image [imgData]="coinsBg1"></app-image>
   <app-image [imgData]="coinsBg2"></app-image>
   <app-image [imgData]="letter"></app-image>
