--- a/src/siene/loading-and-po/loading-and-po.component.css
+++ b/src/siene/loading-and-po/loading-and-po.component.css
@@ -1,22 +1,21 @@
-.loadingShadow{
+.loadingContainer{
 	position: absolute;
 	width: 750px;
   overflow: hidden;
-  background-color: black;
-  opacity: 0.7;
   top:0px;
+  background-repeat: no-repeat;
+  background-size:100% 100%;
 }
-.loadingBg{
+.loadingShadow{
   width: 100%;
   height: 100%;
-  background-color:white;
+  background-color: black;
   opacity: 0.7;
 }
 .loadingPicture{
   position: absolute;
   left: 50%;
-	top: 50%;
-  mix-blend-mode: multiply;
-  margin-left: -290px;
-  margin-top: -217px;
+	top: 60%;
+  margin-left: -55px;
+  margin-top: -55px;
 }
