--- a/src/siene/main-div/main-div.component.html
+++ b/src/siene/main-div/main-div.component.html
@@ -1,4 +1,12 @@
+<!--
+ * @Description: 
+ * @version: 1.0
+ * @Author: Wayne Yu
+ * @Date: 2021-05-19 15:50:30
+ * @LastEditors: Wayne Yu
+ * @LastEditTime: 2021-07-02 14:22:50
+-->
 <div class="mainDiv" [attr.style]="matrix">
-  <app-dynamic-layer [mainHeight]="hSet"></app-dynamic-layer>
+  <app-dynamic-layer [mainHeight]="hSet" (loadingFinish)="loadFinish($event)"></app-dynamic-layer>
   <app-loading-and-po [mainHeight]="hSet" [po]="poObject" [loading]="showShadow"  *ngIf="poObject || showShadow"></app-loading-and-po>
 </div>
