--- a/src/siene/lobby/product-list/product-list.component.html
+++ b/src/siene/lobby/product-list/product-list.component.html
@@ -6,7 +6,7 @@
  * @LastEditors: Wayne Yu
  * @LastEditTime: 2021-07-02 10:20:35
 -->
-<div class="productListContainer" [style.height]="listHeight - 425 + 'px'" [style.background-image]="'url(./../../../assets/bg.png)'">
+<div class="productListContainer" [style.height]="listHeight - 425 + 'px'" [style.background-image]="'url(assets/bg.png)'">
   <div class="productListBar" [style.height]="listHeight - 640 + 'px'" id="productListBarDiv">
     <div class="scrollArea" [style.top]="scrollY + 'px'">
       <app-product-item *ngFor="let item of machines; let i = index" [itemData]="item" [textureData]="textureData" [index]="i" (itemClick)="onItemClick($event)"></app-product-item>
