--- a/src/siene/lobby/product-item/product-item.component.html
+++ b/src/siene/lobby/product-item/product-item.component.html
@@ -9,7 +9,7 @@
 <div class="productItem" [style]="position" id="{{productId}}">
   <app-image [imgData]="productBg"></app-image>
     <div class="productPic">
-      <img src={{itemData.img}} width="320px" height="308px" class="productImage">
+      <img src={{itemData.img}} width="320px" height="308px" class="productImage" (load)="onImgload()">
     </div>
   <app-image [imgData]="vipFlag"></app-image>
   <app-image [imgData]="coinIcon"></app-image>
