--- a/src/siene/video/video/video.component.html
+++ b/src/siene/video/video/video.component.html
@@ -4,12 +4,22 @@
  * @Author: Wayne Yu
  * @Date: 2021-05-26 16:46:50
  * @LastEditors: Wayne Yu
- * @LastEditTime: 2021-07-02 11:29:33
+ * @LastEditTime: 2021-07-05 17:49:25
 -->
 <div class="videoFrame">
     <iframe src="https://direct.hermetix.io/video.html?stream=1" width="1500" height="2400" id="videoFrame"></iframe>
 </div>
 <app-head-bar></app-head-bar>
 <app-image-button [imgData]="backToLobbyBtn" (itemClick)="backToLobby()"></app-image-button>
+<div class="wyfi"></div>
+<app-image  [imgData]="wyfiIcon"></app-image>
+<div class="playerHead"></div>
+<div class="playingUser">
+    <img src="assets/default_head.jpg" width="60" height="60" *ngIf="userHeadIcon"/>
+</div>
+<div class="playingUser">
+    <img src="{{userHeadIcon}}" width="60" height="60" *ngIf="userHeadIcon"/>
+</div>
+<app-text-field [positionRect]="viewRect" [text]="usersCountText" [color]="textColor" [size]="textSize"></app-text-field>
 <app-control-bar [textureData]="textureData" [productImg]="data.img" (videoToggle)="onVideoToggle()" 
     [occupied]="playingUser!=null" [playing]="playing" (startPlayDP)="startMachine()"></app-control-bar>
