--- a/src/siene/video/video/video.component.css
+++ b/src/siene/video/video/video.component.css
@@ -7,3 +7,35 @@
   left: -377px;
   top:95px;
 }
+.wyfi{
+  position:absolute;
+  left: 645px;
+  top: 130px;
+  width: 83px;
+  height: 83px;
+  -webkit-border-radius: 15px;
+  border-radius:15px;
+  background-color: black;
+  opacity: 0.7;
+}
+.playerHead{
+  position:absolute;
+  left: 645px;
+  top: 220px;
+  width: 83px;
+  height: 153px;
+  -webkit-border-radius: 15px;
+  border-radius:15px;
+  background-color: black;
+  opacity: 0.7;
+}
+.playingUser{
+  position: absolute;
+  overflow: hidden;
+  width: 60px;
+  height: 60px;
+  left: 655px;
+  top: 235px;
+  -webkit-border-radius: 10px;
+  border-radius:10px;
+}
