--- a/src/siene/video/video/video.component.html
+++ b/src/siene/video/video/video.component.html
@@ -4,10 +4,10 @@
  * @Author: Wayne Yu
  * @Date: 2021-05-26 16:46:50
  * @LastEditors: Wayne Yu
- * @LastEditTime: 2021-07-13 17:21:26
+ * @LastEditTime: 2021-07-13 17:45:34
 -->
 <div class="videoFrame">
-    <iframe src="{{this.videoUrl1}}" width="750" height="{{pageHeight-95-430}}" id="videoFrame"></iframe>
+    <iframe src="" width="750" height="{{pageHeight-95-430}}" id="videoFrame"></iframe>
 </div>
 <app-head-bar></app-head-bar>
 <app-image-button [imgData]="backToLobbyBtn" (itemClick)="backToLobby()"></app-image-button>
