--- a/src/siene/loading-and-po/loading-and-po.component.html
+++ b/src/siene/loading-and-po/loading-and-po.component.html
@@ -4,11 +4,11 @@
  * @Author: Wayne Yu
  * @Date: 2021-05-20 10:43:20
  * @LastEditors: Wayne Yu
- * @LastEditTime: 2021-07-02 13:51:43
+ * @LastEditTime: 2021-07-14 09:45:00
 -->
 <div class="loadingContainer" [style.height]="mainHeight+'px'" [style.background-image]="loadingBg" *ngIf="showingLoading">
   <div class="loadingShadow"></div>
   <div class="loadingPicture" *ngIf="loading" >
-    <img src="assets/loading.gif" alt="">
+    <img src="assets/loading_ui/loading.gif" alt="">
   </div>
 </div>
