--- a/src/siene/lobby/product-list/product-list.component.html
+++ b/src/siene/lobby/product-list/product-list.component.html
@@ -4,9 +4,9 @@
  * @Author: Wayne Yu
  * @Date: 2021-06-04 10:57:58
  * @LastEditors: Wayne Yu
- * @LastEditTime: 2021-07-02 10:20:35
+ * @LastEditTime: 2021-07-14 09:42:49
 -->
-<div class="productListContainer" [style.height]="listHeight - 425 + 'px'" [style.background-image]="'url(assets/bg.png)'">
+<div class="productListContainer" [style.height]="listHeight - 425 + 'px'" [style.background-image]="'url(assets/product_list/bg.png)'">
   <div class="productListBar" [style.height]="listHeight - 640 + 'px'" id="productListBarDiv">
     <div class="scrollArea" [style.top]="scrollY + 'px'">
       <app-product-item *ngFor="let item of machines | slice : 0 : pageSize; let i = index" [itemData]="item" [textureData]="textureData" [index]="i" (itemClick)="onItemClick($event)"></app-product-item>
