--- a/src/siene/loading-and-po/popup-layer/popup-layer.component.html
+++ b/src/siene/loading-and-po/popup-layer/popup-layer.component.html
@@ -4,8 +4,8 @@
  * @Author: Wayne Yu
  * @Date: 2021-07-14 11:16:40
  * @LastEditors: Wayne Yu
- * @LastEditTime: 2021-07-14 11:29:24
+ * @LastEditTime: 2021-07-14 13:46:08
 -->
 <div class="popupLayer" id="popupLayer">
-  
+  <ng-template popupContainer></ng-template>
 </div>
