--- a/src/siene/loading-and-po/loading-and-po.component.html
+++ b/src/siene/loading-and-po/loading-and-po.component.html
@@ -4,9 +4,9 @@
  * @Author: Wayne Yu
  * @Date: 2021-05-20 10:43:20
  * @LastEditors: Wayne Yu
- * @LastEditTime: 2021-07-14 11:28:13
+ * @LastEditTime: 2021-07-14 16:12:26
 -->
-<div class="loadingContainer" [style.height]="mainHeight+'px'" [style.background-image]="loadingBg" *ngIf="showingLoading">
+<div class="loadingContainer" [style.height]="mainHeight+'px'" [style.background-image]="loadingBg" *ngIf="showingLoadingBg">
   <app-popup-layer></app-popup-layer>
   <div class="loadingShadow"></div>
   <div class="loadingPicture" *ngIf="loading">
