--- a/src/siene/main-div/main-div.component.html
+++ b/src/siene/main-div/main-div.component.html
@@ -4,9 +4,9 @@
  * @Author: Wayne Yu
  * @Date: 2021-05-19 15:50:30
  * @LastEditors: Wayne Yu
- * @LastEditTime: 2021-07-02 14:22:50
+ * @LastEditTime: 2021-07-14 16:14:41
 -->
 <div class="mainDiv" [attr.style]="matrix">
   <app-dynamic-layer [mainHeight]="hSet"></app-dynamic-layer>
-  <app-loading-and-po [mainHeight]="hSet" [po]="poObject"></app-loading-and-po>
+  <app-loading-and-po [mainHeight]="hSet"></app-loading-and-po>
 </div>
