--- a/src/siene/loading-and-po/generic-po/generic-po.component.html
+++ b/src/siene/loading-and-po/generic-po/generic-po.component.html
@@ -1,3 +1,7 @@
-<p>
-  generic-po works!
-</p>
+<div class="generic_po" [style.marginLeft]="-this.marginLeft+'px'" [style.marginTop]="-this.marginTop+'px'">
+    <app-image [imgData]="poBg"></app-image>
+    <app-image [imgData]="prizeBg"></app-image>
+    <app-image [imgData]="coinItem"></app-image>
+    <app-image-button [imgData]="buyBtn" (itemClick)="buyPo()" ></app-image-button>
+    <app-image-button [imgData]="closeBtn" (itemClick)="closePo()" ></app-image-button>
+</div>
