textfield can not touch

--- a/src/basicUI/text-field/text-field.component.css
+++ b/src/basicUI/text-field/text-field.component.css
@@ -4,6 +4,7 @@
   vertical-align: middle;
   -webkit-user-select: none;
   -moz-user-select: none;
+  pointer-events: none;
 }
 .sp{
   white-space:nowrap;
