--- a/src/siene/loading-and-po/generic-po/generic-po.component.css
+++ b/src/siene/loading-and-po/generic-po/generic-po.component.css
@@ -1,3 +1,7 @@
+@font-face {
+    font-family: "Luckiest_Guy";
+    src: url("/assets/fonts/Luckiest_Guy.ttf");
+}
 .generic_po{
     position: absolute;
 }
