--- a/src/siene/loading-and-po/generic-po/generic-po.component.html
+++ b/src/siene/loading-and-po/generic-po/generic-po.component.html
@@ -1,5 +1,13 @@
+<!--
+ * @Description: 
+ * @version: 1.0
+ * @Author: Wayne Yu
+ * @Date: 2021-07-15 11:33:18
+ * @LastEditors: Wayne Yu
+ * @LastEditTime: 2021-07-16 13:35:34
+-->
 <div class="generic_po" [style.marginLeft]="-this.marginLeft+'px'" [style.marginTop]="-this.marginTop+'px'">
-    <app-image [imgData]="poBg"></app-image>
+    <app-image [imgData]="popupBg"></app-image>
     <app-image [imgData]="prizeBg"></app-image>
     <app-image [imgData]="coinItem"></app-image>
     <app-image-button [imgData]="buyBtn" (itemClick)="buyPo()" ></app-image-button>
