--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,1 +1,12 @@
-<app-main-div></app-main-div>
+<!--
+ * @Description: 
+ * @version: 1.0
+ * @Author: Wayne Yu
+ * @Date: 2021-05-19 15:35:54
+ * @LastEditors: Wayne Yu
+ * @LastEditTime: 2021-07-19 10:05:35
+-->
+<div class="mainDiv" [attr.style]="matrix">
+    <app-dynamic-layer [mainHeight]="hSet"></app-dynamic-layer>
+    <app-loading-and-po [mainHeight]="hSet"></app-loading-and-po>
+</div>
