--- a/src/pagePart/gameUI/popup-text-field/popup-text-field.component.html
+++ b/src/pagePart/gameUI/popup-text-field/popup-text-field.component.html
@@ -4,9 +4,8 @@
  * @Author: Wayne Yu
  * @Date: 2021-07-19 12:00:32
  * @LastEditors: Wayne Yu
- * @LastEditTime: 2021-07-19 13:45:14
+ * @LastEditTime: 2021-07-19 15:30:05
 -->
 <div class="textField" [style]="divStyle">
-  <span class="sp" [style.fontFamily]="fontStr" [style.font-weight]="fontBold" [style.color]="colorStr" [style.fontSize]="sizeStr"
-  [style.textStroke]="fontStroke" [style.-webkitTextStroke]="fontStroke" #sp>{{textStr}}</span>
+  <span class="sp" [style]="spanStyle" #sp>{{textStr}}</span>
 </div>
