--- a/src/basicUI/text-field/text-field.component.html
+++ b/src/basicUI/text-field/text-field.component.html
@@ -4,9 +4,8 @@
  * @Author: Wayne Yu
  * @Date: 2021-05-27 14:31:41
  * @LastEditors: Wayne Yu
- * @LastEditTime: 2021-07-19 15:40:41
+ * @LastEditTime: 2021-07-19 17:49:16
 -->
 <div class="textField" [style]="divStyle">
-  <span class="sp" [style.fontFamily]="fontStr" [style.font-weight]="fontBold" [style.color]="colorStr" [style.fontSize]="sizeStr"
-  [style.textStroke]="fontStroke" [style.-webkitTextStroke]="fontStroke" #sp>{{textStr}}</span>
+  <span class="sp" [style]="spanStyle" #sp>{{text}}</span>
 </div>
