--- a/src/pagePart/gameUI/popup-text-field/popup-text-field.component.html
+++ b/src/pagePart/gameUI/popup-text-field/popup-text-field.component.html
@@ -4,8 +4,8 @@
  * @Author: Wayne Yu
  * @Date: 2021-07-19 12:00:32
  * @LastEditors: Wayne Yu
- * @LastEditTime: 2021-07-19 15:30:05
+ * @LastEditTime: 2021-07-19 17:01:19
 -->
 <div class="textField" [style]="divStyle">
-  <span class="sp" [style]="spanStyle" #sp>{{textStr}}</span>
+  <span class="sp" [style]="spanStyle" #sp>{{text}}</span>
 </div>
