--- a/src/siene/loading-and-po/generic-po/generic-po.component.html
+++ b/src/siene/loading-and-po/generic-po/generic-po.component.html
@@ -4,7 +4,7 @@
  * @Author: Wayne Yu
  * @Date: 2021-07-15 11:33:18
  * @LastEditors: Wayne Yu
- * @LastEditTime: 2021-07-16 13:35:34
+ * @LastEditTime: 2021-07-19 17:10:51
 -->
 <div class="generic_po" [style.marginLeft]="-this.marginLeft+'px'" [style.marginTop]="-this.marginTop+'px'">
     <app-image [imgData]="popupBg"></app-image>
@@ -12,8 +12,6 @@
     <app-image [imgData]="coinItem"></app-image>
     <app-image-button [imgData]="buyBtn" (itemClick)="buyPo()" ></app-image-button>
     <app-image-button [imgData]="closeBtn" (itemClick)="closePo()" ></app-image-button>
-    <app-text-field [positionRect]="coinRect" [text]="coinNumberText" [color]="coinTextColor" [size]="coinTextSize"
-     [bold]="true" [font]="coinTextFont" [align]="coinTextAlign" [stroke]="coinStroke" [strokeColor]="coinStrokeColor"></app-text-field>
-    <app-text-field [positionRect]="priceRect" [text]="priceNumberText" [color]="priceTextColor" [size]="priceTextSize"
-     [bold]="true"  [font]="priceTextFont" [align]="priceTextAlign" [stroke]="priceStroke" [strokeColor]="priceStrokeColor"></app-text-field>
+    <app-popup-text-field [textData]="coinText" [text]="coinNumberText"></app-popup-text-field>
+    <app-popup-text-field [textData]="priceText" [text]="priceNumberText"></app-popup-text-field>
 </div>
