--- a/src/siene/lobby/banner/banner.component.html
+++ b/src/siene/lobby/banner/banner.component.html
@@ -4,9 +4,9 @@
  * @Author: Wayne Yu
  * @Date: 2021-06-02 14:04:12
  * @LastEditors: Wayne Yu
- * @LastEditTime: 2021-07-20 15:20:51
+ * @LastEditTime: 2021-07-20 17:29:18
 -->
-<div class="banner" (click)="bennerClick()" [style.animation]="carousel">
-  <img src="assets/banner/banner_01.png" class="bannerPic" *ngFor="let item of featureData; let i = index" [style.left]="i * 750+'px'" >
+<div class="banner" (click)="bennerClick()" [@carousel]="carouselState">
+  <img [src]="item.art" class="bannerPic" *ngFor="let item of featureData; let i = index" [style.left]="i * 750+'px'" >
 </div>
 <div class="bannerHr"></div>
