--- a/src/siene/loading-and-po/generic-popup/generic-popup.component.html
+++ b/src/siene/loading-and-po/generic-popup/generic-popup.component.html
@@ -4,14 +4,11 @@
  * @Author: Wayne Yu
  * @Date: 2021-07-15 11:33:18
  * @LastEditors: Wayne Yu
- * @LastEditTime: 2021-07-22 11:17:48
+ * @LastEditTime: 2021-07-22 11:52:37
 -->
 <div class="generic_po" [style.marginLeft]="-this.marginLeft+'px'" [style.marginTop]="-this.marginTop+'px'">
   <app-image [imgData]="popupBg"></app-image>
-  <!-- <app-image [imgData]="prizeBg"></app-image>
-  <app-image [imgData]="coinItem"></app-image>
-  <app-image-button [imgData]="buyBtn" (itemClick)="buyPo()" ></app-image-button>
+  <app-image [imgData]="titleBg"></app-image>
+  <app-image-button [imgData]="confirmBtn" (itemClick)="confirmPo()" ></app-image-button>
   <app-image-button [imgData]="closeBtn" (itemClick)="closePo()" ></app-image-button>
-  <app-popup-text-field [textData]="coinText" [text]="coinNumberText"></app-popup-text-field>
-  <app-popup-text-field [textData]="priceText" [text]="priceNumberText"></app-popup-text-field> -->
 </div>
