--- a/src/siene/loading-and-po/generic-po/generic-po.component.html
+++ b/src/siene/loading-and-po/generic-po/generic-po.component.html
@@ -4,9 +4,10 @@
  * @Author: Wayne Yu
  * @Date: 2021-07-15 11:33:18
  * @LastEditors: Wayne Yu
- * @LastEditTime: 2021-07-19 17:10:51
+ * @LastEditTime: 2021-07-23 10:49:49
 -->
 <div class="generic_po" [style.marginLeft]="-this.marginLeft+'px'" [style.marginTop]="-this.marginTop+'px'">
+    <img [src]="textureDetactive" (load)="bgTextureLoaded()" [hidden]="true"/>
     <app-image [imgData]="popupBg"></app-image>
     <app-image [imgData]="prizeBg"></app-image>
     <app-image [imgData]="coinItem"></app-image>
